src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Cod_Magazzino__c</fullName>
        <description>codice magazzino</description>
        <label>Cod Magazzino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cod_Richiesta_Reso__c</fullName>
        <description>codice richiesta reso</description>
        <label>Cod Richiesta Reso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consenso_Recesso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consenso Recesso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Spedizione__c</fullName>
        <label>Data Spedizione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Numero_Riga__c</fullName>
        <description>numero di riga d&apos;ordine</description>
        <label>Numero Riga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Base_Prodotto__c</fullName>
        <label>Prezzo Base Prodotto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prezzo_Scontato_Riga__c</fullName>
        <label>Prezzo Scontato Riga</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_Riga__c</fullName>
        <label>Stato Riga</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>q</fullName>
                </value>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>z</fullName>
                </value>
                <value>
                    <fullName>w</fullName>
                </value>
                <value>
                    <fullName>s</fullName>
                </value>
                <value>
                    <fullName>x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Entry__c</fullName>
        <description>tipo entry</description>
        <label>Tipo Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Order__c</fullName>
        <description>transfer order</description>
        <label>Transfer Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>